# TriangleCrossing

./: ALL USED LICENSES  CMakeLists.txt  Intersection.cpp  Intersection.h  IntersectionTests.cpp  Line.cpp  Line.h  Main.cpp  Point.h  PointTests.cpp  README.md  Triangle.cpp  Triangle.h  TriangleTests.cpp  compile.bat  main.cpp
src/: CMakeLists.txt  main.cpp
src/logics/: CMakeLists.txt  Intersection.cpp  Intersection.h  Line.cpp  Line.h  Point.h  Triangle.cpp  Triangle.h
test/: CMakeLists.txt  IntersectionTests.cpp  LineTests.cpp  PointTests.cpp  TriangleTests.cpp
